--- a/app/assets/stylesheets/photos.css
+++ b/app/assets/stylesheets/photos.css
@@ -16,14 +16,15 @@ body {
 }
 
 .photos-wrapper {
-  width: 500px;
-  margin: 0 50px;
+  width: 50%;
+  /*width: 500px;*/
+  margin: 0 3%;
 }
 
 .photo-container {
-  width: 500px;
+  width: 100%;
   z-index: 1000;
-  margin: 50px 0;
+  margin: 10% 0;
   background-image: -webkit-gradient(linear, center top, center bottom, from(#fcfcfc), to(#bfbfbf), color-stop(3%, #f7f7f7), color-stop(12%, #f2f2f2), color-stop(90%, #d9d9d9));
   background-image: -webkit-linear-gradient(top, #fcfcfc, #f7f7f7 3%, #f2f2f2 12%, #d9d9d9 90%, #bfbfbf);
   background-image: -moz-linear-gradient(top, #fcfcfc, #f7f7f7 3%, #f2f2f2 12%, #d9d9d9 90%, #bfbfbf);
@@ -38,6 +39,7 @@ body {
 
 .photo {
   width: 100%;
+  /*width: 100%;*/
 }
 
 .main-svg {
@@ -49,7 +51,7 @@ body {
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
   pointer-events: none;
-  z-index: 2000;
+  z-index: 500;
 }
 
 html { 
@@ -64,7 +66,7 @@ body {
 
 .map-wrapper {
   height: 100%; 
-  width: 100%;
+  width: 150%;
   /*margin-top: -50px;*/
   /*left: 600px;*/
   position: fixed;
