--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -8,8 +8,10 @@
 <% end %>
 
 <div class="clear"></div>
+<h2>Upload Multiple Photos</h2>
+<p>Note: jpg or jpeg format only</p>
 
-<%= s3_uploader_form callback_url: photos_url, callback_param: "photo[image_url]", max_file_size: 10.megabytes, id: "myS3Uploader" do %>
+<%= s3_uploader_form callback_url: photos_url, callback_param: "photo[image_url]", max_file_size: 15.megabytes, id: "myS3Uploader" do %>
   <%= file_field_tag :file, multiple: true %>
 <% end %>
 
