--- a/app/assets/stylesheets/photos.css
+++ b/app/assets/stylesheets/photos.css
@@ -16,15 +16,21 @@ body {
 }
 
 .photos-wrapper {
-  width: 50%;
+  max-width: 50%;
   /*width: 500px;*/
   margin: 0 3%;
 }
 
 .photo-container {
-  width: 100%;
+  /*max-height: 100%;*/
+  /*display: none;*/
+}
+
+.photo {
+  max-width: 100%;
+  /*height: auto;*/
   z-index: 1000;
-  margin: 10% 0;
+  /*margin: 4% 0;*/
   background-image: -webkit-gradient(linear, center top, center bottom, from(#fcfcfc), to(#bfbfbf), color-stop(3%, #f7f7f7), color-stop(12%, #f2f2f2), color-stop(90%, #d9d9d9));
   background-image: -webkit-linear-gradient(top, #fcfcfc, #f7f7f7 3%, #f2f2f2 12%, #d9d9d9 90%, #bfbfbf);
   background-image: -moz-linear-gradient(top, #fcfcfc, #f7f7f7 3%, #f2f2f2 12%, #d9d9d9 90%, #bfbfbf);
@@ -34,11 +40,7 @@ body {
   -webkit-box-shadow: 0 0 19px rgba(0,0,0,0.5);
   -moz-box-shadow: 0 0 19px rgba(0,0,0,0.5);
   box-shadow: 0 0 19px rgba(0,0,0,0.5);
-  /*display: none;*/
-}
-
-.photo {
-  width: 100%;
+  /*width: 100%;*/
   /*width: 100%;*/
 }
 
