--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -17,23 +17,22 @@
 <%= s3_uploader_form callback_url: photos_url, callback_param: "photo[image_url]", id: "myS3Uploader" do %>
 	<%= hidden_field_tag  "Content-Type", "" %>
   <%= file_field_tag :file, multiple: true %>
-  <%= submit_tag "Upload" %>
 <% end %>
 
 <script>
-var onAjaxSend = function(e, xhr, settings, wut) {
-	console.log(e);
-	console.log(xhr);
-	console.log(settings);
-	console.log(wut);
-};
+// var onAjaxSend = function(e, xhr, settings, wut) {
+// 	console.log(e);
+// 	console.log(xhr);
+// 	console.log(settings);
+// 	console.log(wut);
+// };
 
-$(document).on('ajaxSend', onAjaxSend);
+// $(document).on('ajaxSend', onAjaxSend);
 </script>
 <script id="template-upload" type="text/x-tmpl">
-<div id="file-{%=o.unique_id%}" class="upload">
-  {%=o.name%}
-  <div class="progress"><div class="bar" style="width: 0%"></div></div>
-</div>
+	<div id="file-{%=o.unique_id%}" class="upload">
+	  {%=o.name%}
+	  <div class="progress"><div class="bar" style="width: 0%"></div></div>
+	</div>
 </script>
 
