--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -11,3 +11,10 @@
 	<% end %>
 
 </div>
+
+<script>
+  $(function() {
+    $( ".datepicker" ).datepicker({dateFormat:'yy-mm-dd'});
+
+  });
+</script>
