--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -20,6 +20,15 @@
 <% end %>
 
 <script>
+	$(function(){
+		$("#myS3Uploader").S3Uploader({
+			dropZone: $(document)
+			// disableImageResize: false,
+			// imageMaxWidth: 800
+		});
+	});
+
+
 // var onAjaxSend = function(e, xhr, settings, wut) {
 // 	console.log(e);
 // 	console.log(xhr);
