--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -18,6 +18,7 @@
 
 <script>
 	$(document).ready(function() {
-	  gmap.loadScript();
+	  gmap.initialize();
+    ViewPort.initialize();
 	});
 </script>
