--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -1,22 +1,75 @@
 $bg-img: 'http://maps.googleapis.com/maps/api/staticmap?zoom=2&size=640x640&scale=2&maptype=roadmap&style=feature:all|saturation:-70|gamma:1.5&style=feature:all|element:labels|visibility:off&visual_refresh=true&sensor=false';
 /* $bg-img: 'http://maps.googleapis.com/maps/api/staticmap?zoom=4&size=640x640&scale=2&maptype=roadmap&style=feature:all|saturation:-70|gamma:1.5&style=feature:all|element:labels|visibility:off&visual_refresh=true&markers=color:blue|Chicago,IL|San+Francisco,CA&sensor=false'; */
+$black: #222;
+$white: #eee;
+$teal: #1E6D72;
+$light-teal: #1FB5BE;
+
+
+
+/* ------ Globals ------- */
+a {
+	color: $black;
+	text-decoration: none;
+}
+h1 {
+	font-size: 72px;
+}
+
+@mixin gradient-teal {
+  /* Safari 4-5, Chrome 1-9 */
+  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from($teal), to($light-teal));
+
+  /* Safari 5.1, Chrome 10+ */
+  background: -webkit-linear-gradient(top, $light-teal, $teal);
+
+  /* Firefox 3.6+ */
+  background: -moz-linear-gradient(top, $light-teal, $teal);
+
+  /* IE 10 */
+  background: -ms-linear-gradient(top, $light-teal, $teal);
+
+  /* Opera 11.10+ */
+  background: -o-linear-gradient(top, $light-teal, $teal);
+}
 
 /* ------ Layout -------- */
-
 body {
 	background-image: url($bg-img);
 	background-repeat: no-repeat;
 	background-size: cover;
 }
-
 #user_nav {
-  
   width: 100%;
-  height: 30px;
+  height: 20px;
+  background: $light-teal;
 }
-
+#user_nav a {
+	color: $white;
+}
 #title_link {
   float: left;
 }
+#username_link {
+	float: right;
+}
 
-#username_link {float: right;}
+/* ------- Index ------- */
+.index-container {
+	width: 30%;
+	margin: auto;
+}
+.index-container a {
+	display: block;
+	font-size: 32px;
+	background: $light-teal;
+	color: $white;
+	border-radius: 12px;
+	padding: 18px;
+	text-align: center;
+	&:hover {
+		@include gradient-teal;
+	}
+}
+
+
