--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,1 +1,18 @@
+<style>
+	.main_pic {
+	display: inline-block;
+	}
+	.palette {
+	display: inline-block;
+	vertical-align: top;
+	}
+</style>
 <h1>Photo show page</h1>
+
+<div class="main_pic" ><%= image_tag(@photo.url) %></div>
+<div class="palette">
+	<div style="width:100px; height:100px; background-color:<%= @photo.palette.color1 %>;"></div>
+	<div style="width:100px; height:100px; background-color:<%= @photo.palette.color2 %>;"></div>
+	<div style="width:100px; height:100px; background-color:<%= @photo.palette.color3 %>;"></div>
+	<div style="width:100px; height:100px; background-color:<%= @photo.palette.color4 %>;"></div>
+</div>
