--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -2,8 +2,8 @@ $bg-img: 'http://maps.googleapis.com/maps/api/staticmap?zoom=2&size=640x640&scal
 /* $bg-img: 'http://maps.googleapis.com/maps/api/staticmap?zoom=4&size=640x640&scale=2&maptype=roadmap&style=feature:all|saturation:-70|gamma:1.5&style=feature:all|element:labels|visibility:off&visual_refresh=true&markers=color:blue|Chicago,IL|San+Francisco,CA&sensor=false'; */
 $black: #222;
 $white: #eee;
-$teal: #1E6D72;
-$light-teal: #1FB5BE;
+$nav-color: #1E6D72;
+$light-nav-color: #1FB5BE;
 
 
 
@@ -18,19 +18,19 @@ h1 {
 
 @mixin gradient-teal {
   /* Safari 4-5, Chrome 1-9 */
-  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from($teal), to($light-teal));
+  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from($nav-color), to($light-nav-color));
 
   /* Safari 5.1, Chrome 10+ */
-  background: -webkit-linear-gradient(top, $light-teal, $teal);
+  background: -webkit-linear-gradient(top, $light-nav-color, $nav-color);
 
   /* Firefox 3.6+ */
-  background: -moz-linear-gradient(top, $light-teal, $teal);
+  background: -moz-linear-gradient(top, $light-nav-color, $nav-color);
 
   /* IE 10 */
-  background: -ms-linear-gradient(top, $light-teal, $teal);
+  background: -ms-linear-gradient(top, $light-nav-color, $nav-color);
 
   /* Opera 11.10+ */
-  background: -o-linear-gradient(top, $light-teal, $teal);
+  background: -o-linear-gradient(top, $light-nav-color, $nav-color);
 }
 
 /* ------ Layout -------- */
@@ -39,19 +39,27 @@ body {
 	background-repeat: no-repeat;
 	background-size: cover;
 }
-#user_nav {
+nav {
   width: 100%;
   height: 20px;
-  background: $light-teal;
+  background: $light-nav-color;
+	line-height: 20px;
+	font-size: 12px;
+	color: $white;
 }
-#user_nav a {
+nav a {
 	color: $white;
 }
 #title_link {
+	padding-left: 8px;
   float: left;
 }
 #username_link {
+	padding-right: 8px;
 	float: right;
+	a {
+		text-decoration: underline;
+	}
 }
 
 /* ------- Index ------- */
@@ -62,7 +70,7 @@ body {
 .index-container a {
 	display: block;
 	font-size: 32px;
-	background: $light-teal;
+	background: $light-nav-color;
 	color: $white;
 	border-radius: 12px;
 	padding: 18px;
