--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,4 +1,4 @@
-<div class="index-container">
+<div class="main-container">
 <h1>Welcome to Viagg.io</h1>
 <% if @user %>
 <h2><%= link_to "Create a Trip!", new_trip_path %></h2>
