--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -18,7 +18,10 @@ li {
 	margin: 12px 0;
 	background-color: transparent;
 }
-/* ------ Layout -------- */
+/* ------ Main -------- */
+.main-container {
+	@include narrow-container
+}
 body {
 	background-image: url($bg-img);
 	background-repeat: no-repeat;
@@ -27,7 +30,7 @@ body {
 nav {
   width: 100%;
   height: 20px;
-  background: $light-nav;
+  background: $nav;
 	line-height: 20px;
 	font-size: 12px;
 	color: $white;
@@ -44,23 +47,5 @@ nav a {
 	float: right;
 	a {
 		text-decoration: underline;
-	}
-}
-
-/* ------- Index ------- */
-.narrow-container {
-	width: 30%;
-	margin: auto;
-}
-.narrow-container a {
-	display: block;
-	font-size: 32px;
-	background: $light-nav;
-	color: $white;
-	border-radius: 12px;
-	padding: 18px;
-	text-align: center;
-	&:hover {
-		@include shadow;
 	}
 }
