--- a/app/assets/stylesheets/map.css
+++ b/app/assets/stylesheets/map.css
@@ -6,6 +6,14 @@ body {
 	margin: 0; 
 	padding: 0;
 }
+.map-wrapper {
+  height: 100%; 
+  width: 150%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -2000;
+}
 #map-canvas {
 	height: 100%; 
 	width: 100%;
