--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,7 @@
-<div class="container">
+<div class="user-container">
 	<% if @user == @user_on_page %>
 	<h1>My Profile</h1>
 	<h2>Check out my Trips:</h2>
-	<%= link_to 'Create a Trip', new_trip_path %>
 	<% else %>
 	<h1>Welcome to the profile of <%= @user_on_page.name %></h1>
 	<h2>Check out <%= @user_on_page.name %>'s Trips:</h2>
@@ -17,4 +16,5 @@
 	<% end %>
 	<% end %>
 	</ul>
+	<%= link_to 'Create a Trip', new_trip_path %>
 </div
