--- a/app/assets/stylesheets/trips.css.scss
+++ b/app/assets/stylesheets/trips.css.scss
@@ -3,13 +3,19 @@
 
 /* ------ Trips edit page ------ */
 .container {
-	padding: 10px;
-	width: 800px;
-	margin: auto;
-	font-size: 18px;
+  padding: 10px;
+  width: 800px;
+  margin: auto;
+  font-size: 18px;
 }
 
 /* ------- Index ------- */
 .trips-container {
-	@include narrow-container
+  @include narrow-container;
+  a {
+    @include action-link;
+  }
+  li a {
+    @include info-link;
+  }
 }
