--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -3,49 +3,52 @@
 
 /* ------ Globals ------- */
 a {
-	color: $black;
-	text-decoration: none;
+  color: $black;
+  text-decoration: none;
 }
 h1 {
-	font-size: 72px;
+  font-size: 72px;
 }
 
 ul {
-	list-style-type: none;
-	padding: 0;
+  list-style-type: none;
+  padding: 0;
 }
 li {
-	margin: 12px 0;
-	background-color: transparent;
+  margin: 12px 0;
+  background-color: transparent;
 }
 /* ------ Main -------- */
 .main-container {
-	@include narrow-container
+  @include narrow-container;
+  a {
+    @include action-link;
+  }
 }
 body {
-	background-image: url($bg-img);
-	background-repeat: no-repeat;
-	background-size: cover;
+  background-image: url($bg-img);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 nav {
   width: 100%;
   height: 20px;
   background: $nav;
-	line-height: 20px;
-	font-size: 12px;
-	color: $white;
+  line-height: 20px;
+  font-size: 12px;
+  color: $white;
 }
 nav a {
-	color: $white;
+  color: $white;
 }
 #title_link {
-	padding-left: 8px;
+  padding-left: 8px;
   float: left;
 }
 #username_link {
-	padding-right: 8px;
-	float: right;
-	a {
-		text-decoration: underline;
-	}
+  padding-right: 8px;
+  float: right;
+  a {
+    text-decoration: underline;
+  }
 }
