--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -2,5 +2,45 @@
 @import "mixins";
 
 .user-container {
-	@include narrow-container;
+  @include narrow-container;
+}
+
+.user-container .create {
+  @include action-link;
+}
+
+.trip-name {
+  @include info-link;
+}
+
+div.update-buttons {
+  display: inline-block;
+  width: 100%;
+  text-align: right;
+  margin: 4px 0 -30px 0;
+}
+
+.edit-button, .delete-button {
+  color: $nav;
+  padding: 6px 14px;
+  font-size: 16px;
+  background: $white;
+}
+
+.edit-button {
+  border-top-left-radius: 8px;
+  &:hover {
+    -webkit-box-shadow: -5px -5px 19px -6px rgba(0,0,0,0.5);
+    -moz-box-shadow: -5px -5px 19px -6px rgba(0,0,0,0.5);
+    box-shadow: -5px -5px 19px -6px rgba(0,0,0,0.5);
+  }
+}
+
+.delete-button {
+  border-top-right-radius: 8px;
+  &:hover {
+    -webkit-box-shadow: 5px -5px 19px -6px rgba(0,0,0,0.5);
+    -moz-box-shadow: 5px -5px 19px -6px rgba(0,0,0,0.5);
+    box-shadow: 5px -5px 19px -6px rgba(0,0,0,0.5);
+  }
 }
