users index page styled with info-link mixin and adjusted margins

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 	<h1>All Users:</h1>
 	<ul>
 		<% @users.each do |user| %>
-			<li><%= link_to user.name, user_path(user) %></li>
+			<li><%= link_to user.name, user_path(user), class: "user-name" %></li>
 		<% end %>
 	</ul>
 </div>
