--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,12 +1,19 @@
 @import "variables";
 @import "mixins";
 
+/* ---- User index ----- */
+.user-name {
+  @include info-link;
+}
+
+/* ---- User show ----- */
 .user-container {
   @include narrow-container;
 }
 
 .user-container .create {
   @include action-link;
+  margin-top: 36px;
 }
 
 .trip-name {
@@ -17,13 +24,13 @@ div.update-buttons {
   display: inline-block;
   width: 100%;
   text-align: right;
-  margin: 4px 0 -30px 0;
+  margin: 2px 0 -30px 0;
 }
 
 .edit-button, .delete-button {
   color: $nav;
-  padding: 6px 14px;
-  font-size: 16px;
+  padding: 4px 18px;
+  font-size: 14px;
   background: $white;
 }
 
