--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -4,3 +4,13 @@
 	width: 800px;
 	margin: auto;
 }
+
+.single_photo img {
+  width: 100%;
+}
+.single_photo {
+  width: 30%;
+  display: inline-block;
+  vertical-align: top;
+  padding: 10px;
+}
