--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -1,96 +1,10 @@
-<h1>Upload new photo to Imgur</h1>
-
-<div>DROP!<button onclick="document.querySelector('input').click()">Or click</button></div>
-<input style="visibility: collapse; width: 0px;" type="file" multiple onchange="uploadImage(this.files,this.files.length-1)">
-<div id="results"><p>Here's the results:</p></div>
-
-
-<script>
-
-    /* Drag'n drop stuff */
-    window.ondragover = function(e) {e.preventDefault()}
-    window.ondrop = function(e) {e.preventDefault(); uploadImage(e.dataTransfer.files); }
-    self.uploadImage = function(files,numRemaining) {
-
-          date_created = null;
-          lat = null;
-          lon = null;
-          latRef = null;
-          lonRef = null;
-          response = null;
-
-      if(numRemaining>=0){
-
-        console.log(numRemaining);
-        /* Is the file an image? */
-        if (!files[numRemaining] || !files[numRemaining].type.match(/image.*/)) return;
-
-        // Alert the EXIF data (need to include the vendor files)
-        var file = files[numRemaining]
-        fr = new FileReader;
-        fr.onloadend = function() {
-          var exif = EXIF.readFromBinaryFile(new BinaryFile(this.result));  
-          date_created = (exif.DateTimeDigitized);
-          lat = (exif.GPSLatitude);
-          lon = (exif.GPSLongitude);
-          latRef = (exif.GPSLatitudeRef);
-          lonRef = (exif.GPSLongitudeRef);
-        };
-        fr.readAsBinaryString(file);
-
-        // /* It is! */
-        // document.body.className = "uploading";
-
-        /* Lets build a FormData object*/
-        var fd = new FormData(); // I wrote about it: https://hacks.mozilla.org/2011/01/how-to-develop-a-html5-image-uploader/
-
-        fd.append("image", files[numRemaining]); // Append the files[numRemaining]
-        var xhr = new XMLHttpRequest(); // Create the XHR (Cross-Domain XHR FTW!!!) Thank you sooooo much imgur.com
-        xhr.open("POST", "https://api.imgur.com/3/image.json"); // Boooom!
-        xhr.onload = function () {
-            response = JSON.parse(xhr.responseText).data.link;
-            $("#results").append("<p>"+response+"</p>");
-        }
-        xhr.setRequestHeader('Authorization', 'Client-ID 410a62cc1627046');
-
-        /* And now, we send the formdata */
-        xhr.send(fd);
-
-        // // addEventListener doesnt work for files, only images
-        // xhr.addEventListener("progress", updateProgress, false);
-        // function updateProgress(e) {
-        //   if (e.lengthComputable) {
-        //     var percentage = Math.round((e.loaded * 100) / e.total);
-        //     console.log(percentage);
-        //     // $('#progress').css('width',pecentage);
-        //   };
-        // };
-
-        xhr.addEventListener("load", transferComplete, false);
-        function transferComplete(evt) {
-          alert("The transfer is complete.");
-          console.log("posting...")
-          $.ajax({
-            url: "/photos",
-            type: "post",
-            data: {url: response,
-                  date: date_created,
-                  lat: lat,
-                  lon: lon,
-                  latRef: latRef,
-                  lonRef: lonRef
-            }
-          });
-          uploadImage(files,numRemaining-1);
-        }
-      };
-    };
-
-
-</script>
-
-
-
-
-
-
+<div class="container">
+  <h1>Upload new photo to Imgur</h1>
+  <p><%= link_to "Back to Photo List", photos_path %></p>
+  <div>DROP!<button onclick="document.querySelector('input').click()">Or click</button></div>
+  <input style="visibility: collapse; width: 0px;" type="file" multiple onchange="uploadImage(this.files,this.files.length-1)">
+  <div id="results"><p>Here's the results:</p></div>
+</div>
+  <script>
+    imgur_uploader();
+  </script>
