--- a/app/assets/javascripts/editing.js.erb
+++ b/app/assets/javascripts/editing.js.erb
@@ -4,18 +4,24 @@ var EditButton = {
       var photoId = $(success).data("photo-id");
       var selector  = "#form_"+photoId;
       $(selector).replaceWith(success);
-
-      // photoId = success['photo_id'];
+      $('.edit_button').on('click', EditButton.editButton);
       
-      // selector = '#form_'+photoId;
-      // alert(selector);
-      // $(selector).replaceWith("<div data-photo-id='"+success['photo_id']+"' data-trip-id='"+success['trip_id']+"'>");
     },
     submitForm: function (event) {
         event.preventDefault();
-        var data = $(this).serialize();
-        var photoIdArray = data.match(/photoId=(\d+)/);
-        var photoId = photoIdArray[1];
+        console.log($(this));
+        var data = {photo_id: $(this).find('.photo_id').val(),
+                   photo_lat: $(this).find('.lat').val(),
+                  photo_long: $(this).find('.long').val(),
+                    photo_caption: $(this).find('.caption').val(),
+                   photo_date: $(this).find('.date').val(),
+                    photo_trip_id: $(this).find('.trip_id').val()
+                     
+        };
+        console.log($(data));
+        photoId = data["photo_id"];
+        console.log(photoId);
+        
         $.ajax({
             type: "PUT",
             url: '/photos/'+photoId,
@@ -32,8 +38,20 @@ var EditButton = {
         var photoDate = ($(this).siblings('.photo_date').text());
         var photoId = $(this).parent().data('photo-id');
         var tripId = $(this).parent().data('trip-id');
-        $(this).parent().replaceWith("<form class='editForm' id='form_"+photoId+"'><label for='caption'>Caption: </label><input type='text' name='caption' value='" + photoCaption + "'><br><label for='lat'>Latitude: </label><input type='text' name='lat' value='" + photoLat + "'><br><label for='long'>Long: </label><input type='text' name='long' value='" + photoLong + "'><br><label for='date'>Date: </label><input type='text' name='date' value='" + photoDate + "'><input type='hidden' name='photoId' value='" + photoId + "'><input type='hidden' name='tripId' value='" + tripId + "'><input type='submit' value='Submit'></form>");
-        $('.editForm').on('submit', EditButton.submitForm);
+        var formId = "form_"+photoId;
+        var formClone = $('#editForm').clone().removeClass('hidden')
+        .attr("id", formId).attr("method", 'PUT').attr("action", "photos/"+photoId);
+        formClone.find("#photo_caption").val(photoCaption);
+        formClone.find("#photo_lat").val(photoLat);
+        formClone.find("#photo_long").val(photoLong);
+        formClone.find("#photo_date").val(photoDate);
+        formClone.find("#photo_id").val(photoId);
+        formClone.find("#photo_trip_id").val(tripId);
+        var replaceShit =  $(this).parent().replaceWith(formClone);
+        selector = '#form_'+photoId;
+        // $(this).parent().replaceWith("<form class='editForm' id='form_"+photoId+"'><label for='caption'>Caption: </label><input type='text' name='caption' value='" + photoCaption + "'><br><label for='lat'>Latitude: </label><input type='text' name='lat' value='" + photoLat + "'><br><label for='long'>Long: </label><input type='text' name='long' value='" + photoLong + "'><br><label for='date'>Date: </label><input type='text' name='date' value='" + photoDate + "'><input type='hidden' name='photoId' value='" + photoId + "'><input type='hidden' name='tripId' value='" + tripId + "'><input type='submit' value='Submit'></form>");
+        // $(selector).on('submit', EditButton.submitForm);
+        $(selector).on('submit', EditButton.submitForm);
     },
     initialize: function () {
         $('.edit_button').on('click', EditButton.editButton);
