added address geocoding

--- a/app/assets/javascripts/editing.js.erb
+++ b/app/assets/javascripts/editing.js.erb
@@ -15,7 +15,8 @@ var EditButton = {
                   photo_long: $(this).find('.long').val(),
                     photo_caption: $(this).find('.caption').val(),
                    photo_date: $(this).find('.date').val(),
-                    photo_trip_id: $(this).find('.trip_id').val()
+                    photo_trip_id: $(this).find('.trip_id').val(),
+                    photo_address: $(this).find('.address').val()
                      
         };
         console.log($(data));
